--- a/ejs-neu/views/partials/create.ejs
+++ b/ejs-neu/views/partials/create.ejs
@@ -1,5 +1,5 @@
 <!-- modal login -->
-			<div class="modal fade scrollen" id="myModal" role="dialog">
+			<div class="modal fade scrollen" id="createModal" role="dialog">
 				<div class="modal-dialog">
 					<!-- Modal content-->
 					<div class="modal-content">
