--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -3,27 +3,25 @@
 <head>
 	<link rel="styleSheet" type="text/css" href="css/style.css" />
     <% include ../partials/head %>
+	
 	<script type="text/javascript">
-		function onCreate(){
-		$("#myModal").modal("show");
+	
+		function onCreateGadget(){
+		$("#createModal").modal("show");
 	}
 		
 	</script>
 </head>
 <body >
 
-<header>
-				<% include ../partials/header %>
-				
-			</header>
-<div class="container">
-	<div class="row">
-		<div class="col-sm-1"></div>
-		<div class="col-sm-10">
-			
-	
-    
-			<main>
+	<header>
+		<% include ../partials/header %>
+	</header>
+		<div class="container">
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-10">
+				<main>
 				<div class="col-sm-6">
 					<div class="jumbotron">
 						<h1>This is great</h1>
@@ -54,20 +52,19 @@
 					<div class="jumbotron">
 						<h1>This is great</h1>
 						<p>Welcome to templating using EJS</p>
-					</div>
-					
-				</div>
-					
-			
-		
-			</main>
-				
-			
-			<% include ../partials/create %>
+					</div>					
+				</div>	
+				</main>			
+				<!-- Include Modal create. It is activated by clicking the '+' Button in the buttom right corner -->
+				<button type="button" class="fixedbutton btn btn-primary" onclick="onCreateGadget()">
+					<span class="glyphicon glyphicon-plus" ></span>
+				</button>
+				<% include ../partials/create %>
+			</div>
+			<div class="col-sm-1"></div>
 		</div>
-		<div class="col-sm-1"></div>
-	</div>
-</div>
+		</div>
+			
 			<footer >
 				<% include ../partials/footer %>
 			</footer>
