--- a/ejs-neu/views/partials/header.ejs
+++ b/ejs-neu/views/partials/header.ejs
@@ -1,19 +1,17 @@
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<!-- Images above the menu bar. Disappears by scrolling -->
 <div class="container-fluid test2" >
 	  <h1>IoT Manager</h1>
 	  <h3>... schaltet alles ein und/ oder aus!</h3>
 	  
 </div>
 
-<style>
 
-</style>
-<link rel"stylesheet" type="text/css" href="css/style.css" />
-<!--Navigationsleiste-->
+<!--Navigationsbar-->
 <nav class="navbar navbar-inverse " data-spy="affix" data-offset-top="197" id="nav">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="menubutton">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
