--- a/ejs-neu/views/partials/login.ejs
+++ b/ejs-neu/views/partials/login.ejs
@@ -1,43 +1,40 @@
 <!-- modal login -->
-			<div class="modal fade scrollen" id="myModal" role="dialog">
-				<div class="modal-dialog">
-					<!-- Modal content-->
-					<div class="modal-content">
-						
-						<div class="modal-header" style="padding:35px 50px;">
-							<button type="button" class="close" data-dismiss="modal">&times;</button>
-							<h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
-						</div>
-						
-						<div class="modal-body" style="padding:40px 50px;">
-							<form role="form">
-							<div class="form-group">
-							  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
-							  <input type="text" class="form-control" id="usrname" placeholder="Benutzername">
-							</div>
-							<div class="form-group">
-							  <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
-							  <input type="password" class="form-control" id="psw" placeholder="Passwort">
-							</div>
-							
-							  <button type="submit" class="btn btn-success btn-default pull-left" onclick="window.location.href='/main'"><span class="glyphicon glyphicon-log-in"></span> Login</button>
-							  <button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-						  </form>
-						</div>
-						<div class="modal-footer">
-						  <div class="row">
-							<div class="col-sm-4"></div>
-							<div class="col-sm-4">
-						  <button type="submit" class="btn btn-default btn-block" data-dismiss="modal" id="register" onclick="onRegister()"><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
-						  </div>
-						  <div class="col-sm-4"></div>
-						  </div>
-						</div>
-					</div>
-				</div>
-			</div>
+<div class="modal fade scrollen" id="loginModal" role="dialog">
+	<div class="modal-dialog">
 
+	<!-- Modal content-->
+	<div class="modal-content">
+	<!-- Modal header -->
+		<div class="modal-header stylemodal" >
+			<button type="button" class="close" data-dismiss="modal">&times;</button>
+			<h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
 		</div>
-		<div class="col-sm-4"></div>
-	</div>	
+	<!-- Modal body-->					
+		<div class="modal-body stylemodal" ">
+			<form role="form" name="loginform">
+				<div class="form-group">
+				  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
+				  <input type="text" class="form-control" id="username" placeholder="Benutzername">
+				</div>
+				<div class="form-group">
+					<label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
+					<input type="password" class="form-control" id="psw" placeholder="Passwort">
+				</div>
+				<!-- Login Cancel Button -->
+				<button type="submit" class="btn btn-success btn-default pull-left" onclick="validateLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+				<button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+			</form>
+		</div>
+	<!-- Modal footer -->
+		<div class="modal-footer">
+			<div class="row">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<button type="submit" class="btn btn-default btn-block" data-dismiss="modal" id="register" onclick="onSwitchReg()"><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
+				</div>
+				<div class="col-sm-4"></div>
+			</div>
+		</div>
+	</div>
+	</div>
 </div>
