--- a/ejs-neu/views/partials/register.ejs
+++ b/ejs-neu/views/partials/register.ejs
@@ -1,5 +1,49 @@
 <!-- Modal -->  
-<div class="container wrapper " >
+<div class="container wrapp<!-- modal login -->
+<div class="modal fade scrollen" id="regModal" role="dialog">
+	<div class="modal-dialog">
+
+	<!-- Modal content-->
+	<div class="modal-content">
+	<!-- Modal header -->
+		<div class="modal-header" style="padding:35px 50px;">
+			<button type="button" class="close" data-dismiss="modal">&times;</button>
+			<h4><span class="glyphicon glyphicon-lock"></span> Registrieren</h4>
+		</div>
+	<!-- Modal body-->					
+		<div class="modal-body stylemodal" ">
+			<form role="form">
+				<div class="form-group">
+				  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
+				  <input type="text" class="form-control" id="username2" placeholder="Benutzername">
+				</div>
+				<div class="form-group">
+					<label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
+					<input type="password" class="form-control" id="psw" placeholder="Passwort">
+				</div><div class="form-group">
+					<label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
+					<input type="password" class="form-control" id="psw" placeholder="Passwort">
+				</div>
+				
+				<!-- Login Cancel Button -->
+				<button type="submit" class="btn btn-success btn-default pull-left" ><span class="glyphicon glyphicon-log-pencil"></span> Login</button>
+				<button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+			</form>
+		</div>
+	<!-- Modal footer -->
+		<div class="modal-footer">
+			<div class="row">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<button type="submit" class="btn btn-default btn-block" data-dismiss="modal" id="register" onclick="onBackLogin()"><span class="glyphicon glyphicon-log-in"></span> Zum Login</button>
+				</div>
+				<div class="col-sm-4"></div>
+			</div>
+		</div>
+	</div>
+	</div>
+</div>
+
 	<div class="row">
 		<div class="col-sm-4"></div>
 		<div class="col-sm-4">
@@ -9,12 +53,12 @@
 					<!-- Modal content-->
 					<div class="modal-content">
 						
-						<div class="modal-header" style="padding:35px 50px;">
+						<div class="modal-header stylemodal">
 							<button type="button" class="close" data-dismiss="modal">&times;</button>
 							<h4><span class="glyphicon glyphicon-globe"></span> Registrieren</h4>
 						</div>
 						
-						<div class="modal-body" style="padding:40px 50px;">
+						<div class="modal-body stylemodal" >
 							<form role="form">
 							<div class="form-group">
 							  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
