--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -23,10 +23,20 @@
 			<div class="col-sm-10">
 				<main>
 				<div class="col-sm-6">
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
+					<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Gerätename</h3>
+						</div>
+						<div class="panel-body">
+							<p>IP-Adresse: 191.188.100.255</p>
+							<P>Port: 8000</p>
+							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
+							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
+						</div>
+						
+						 
+						</div>
+						
 					<div class="jumbotron">
 						<h1>This is great</h1>
 						<p>Welcome to templating using EJS</p>
@@ -41,18 +51,55 @@
 					</div>
 				</div>
 				<div class="col-sm-6">
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>					
+					<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Gerätename</h3>
+						</div>
+						<div class="panel-body">
+							<p>IP-Adresse: 191.188.100.255</p>
+							<P>Port: 8000</p>
+							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
+							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
+						</div>
+						
+						 
+						</div><div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Gerätename</h3>
+						</div>
+						<div class="panel-body">
+							<p>IP-Adresse: 191.188.100.255</p>
+							<P>Port: 8000</p>
+							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
+							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
+						</div>
+						
+						 
+						</div><div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Gerätename</h3>
+						</div>
+						<div class="panel-body">
+							<p>IP-Adresse: 191.188.100.255</p>
+							<P>Port: 8000</p>
+							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
+							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
+						</div>
+						
+						 
+						</div><div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Gerätename</h3>
+						</div>
+						<div class="panel-body">
+							<p>IP-Adresse: 191.188.100.255</p>
+							<P>Port: 8000</p>
+							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
+							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
+						</div>
+						
+						 
+						</div>			
 				</div>	
 				</main>			
 				<!-- Include Modal create. It is activated by clicking the '+' Button in the buttom right corner -->
