--- a/ejs-neu/views/partials/create.ejs
+++ b/ejs-neu/views/partials/create.ejs
@@ -6,14 +6,30 @@
 						
 						<div class="modal-header" style="padding:35px 50px;">
 							<button type="button" class="close" data-dismiss="modal">&times;</button>
-							<h4><span class="glyphicon glyphicon-lock"></span> Gerät anlegen</h4>
+							<h4><span class="glyphicon glyphicon-home"></span> Gerät anlegen</h4>
 						</div>
 						
 						<div class="modal-body" style="padding:40px 50px;">
-							Details
+							<form role="form" name="createGadget">
+								<div class="form-group">
+								  <label for="gadget"><span class="glyphicon glyphicon-cd"></span> Gerätename</label>
+								  <input type="text" class="form-control" id="gadgetname" placeholder="Gerätename">
+								</div>
+								<div class="form-group">
+									<label for="ip"><span class="glyphicon glyphicon-cloud"></span> IP-Adresse</label>
+									<input type="text" class="form-control" id="ip" placeholder="IP-Adresse">
+								</div>
+								<div class="form-group">
+									<label for="port"><span class="glyphicon glyphicon-cloud"></span> Port</label>
+									<input type="text" class="form-control" id="port" placeholder="Port">
+								</div>
+								<!-- Login Cancel Button -->
+								
+						</form>
 						</div>
 						<div class="modal-footer">
-							Footer
+							<button type="submit" class="btn btn-success btn-default pull-left" "><span class="glyphicon glyphicon-pencil"></span> Anlegen</button>
+								<button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
 						</div>
 					</div>
 				</div>
