--- a/ejs-neu/views/partials/createWF.ejs
+++ b/ejs-neu/views/partials/createWF.ejs
@@ -13,7 +13,7 @@
 							<form role="form" name="createGadget">
 								<div class="form-group">
 								  <label for="gadget"><span class="glyphicon glyphicon-cd"></span> Workflow</label>
-								  <input type="text" class="form-control" id="gadgetname" placeholder="z.B. Kino">
+								  <input type="text" class="form-control" id="gadgetname" placeholder="Bezeichnung: z.B. Kino">
 								</div>
 																
 								<div id="ScrollCB" style="height:50;width:200px;overflow:auto"> 
@@ -41,8 +41,8 @@
 						</form>
 						</div>
 						<div class="modal-footer">
-							<button type="submit" class="btn btn-success btn-default pull-left" "><span class="glyphicon glyphicon-pencil"></span> Anlegen</button>
-								<button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+							<button type="button" class="btn btn-success btn-default pull-left" onclick="showData()"><span class="glyphicon glyphicon-pencil"></span> Anlegen</button>
+								<button type="button" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
 						</div>
 					</div>
 				</div>
