--- a/ejs-neu/views/partials/login.ejs
+++ b/ejs-neu/views/partials/login.ejs
@@ -6,7 +6,7 @@
 	<div class="modal-content">
 	<!-- Modal header -->
 		<div class="modal-header stylemodal" >
-			<button type="button" class="close" data-dismiss="modal">&times;</button>
+			
 			<h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
 		</div>
 	<!-- Modal body-->					
@@ -21,8 +21,8 @@
 					<input type="password" class="form-control" id="psw" placeholder="Passwort">
 				</div>
 				<!-- Login Cancel Button -->
-				<button type="submit" class="btn btn-success btn-default pull-left" onclick="validateLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
-				<button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+				<button type="button" class="btn btn-success btn-md center-block distance" onclick="validateLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+				
 			</form>
 		</div>
 	<!-- Modal footer -->
