--- a/ejs-neu/views/partials/register.ejs
+++ b/ejs-neu/views/partials/register.ejs
@@ -1,5 +1,4 @@
-<!-- Modal -->  
-<div class="container wrapp<!-- modal login -->
+<!-- Register Modal -->  
 <div class="modal fade scrollen" id="regModal" role="dialog">
 	<div class="modal-dialog">
 
@@ -7,14 +6,13 @@
 	<div class="modal-content">
 	<!-- Modal header -->
 		<div class="modal-header" style="padding:35px 50px;">
-			<button type="button" class="close" data-dismiss="modal">&times;</button>
 			<h4><span class="glyphicon glyphicon-lock"></span> Registrieren</h4>
 		</div>
 	<!-- Modal body-->					
 		<div class="modal-body stylemodal" ">
-			<form role="form">
+			<form role="form" id="form12">
 				<div class="form-group">
-				  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
+				  <label for="usrname" id="user"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
 				  <input type="text" class="form-control" id="username2" placeholder="Benutzername">
 				</div>
 				<div class="form-group">
@@ -26,8 +24,8 @@
 				</div>
 				
 				<!-- Login Cancel Button -->
-				<button type="submit" class="btn btn-success btn-default pull-left" ><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
-				<button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+				<button type="submit" class="btn btn-success btn-md center-block " ><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
+				
 			</form>
 		</div>
 	<!-- Modal footer -->
@@ -42,6 +40,5 @@
 		</div>
 	</div>
 	</div>
-</div>
 
 	
