--- a/ejs-neu/views/partials/login.ejs
+++ b/ejs-neu/views/partials/login.ejs
@@ -11,17 +11,18 @@
 		</div>
 	<!-- Modal body-->					
 		<div class="modal-body stylemodal" ">
-			<form role="form" name="loginform">
+			<form role="form" >
 				<div class="form-group">
 				  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
-				  <input type="text" class="form-control" id="username" placeholder="Benutzername">
+				  <input type="text" class="form-control" id="user" placeholder="Benutzername">
 				</div>
 				<div class="form-group">
 					<label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
-					<input type="password" class="form-control" id="psw" placeholder="Passwort">
+					<input type="password" class="form-control" id="password" placeholder="Passwort">
 				</div>
 				<!-- Login Cancel Button -->
-				<button type="button" class="btn btn-success btn-md center-block distance" onclick="validateLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+				<button type="button" class="btn btn-success btn-md center-block" onclick="onLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+				<!--<button type="button" class="btn btn-default btn-md pull-right" onclick="onClear();"><span class="glyphicon glyphicon-remove"></span> Löschen</button>-->
 				
 			</form>
 		</div>
