--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -23,7 +23,7 @@
 			
 		}
 		function createGadgetEntry(name, ip, port){
-			var panel = '<div class="panel panel-primary"><div class="panel-heading"><h2 class="panel-title">'+name +'</h2></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-default pull-right"><span class="glyphicon glyphicon-remove"></div></div>';
+			var panel = '<div class="panel panel-primary"><div class="panel-heading"><h2 class="panel-title">'+name +'</h2></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-default pull-right"><span class="glyphicon glyphicon-remove"></span></button><button class="btn btn-xs btn-primary pull-left"><span class="glyphicon glyphicon-console"></span>HTTP Request</button></div></div>';
 			
 			if(count % 2 == 0){
 				$("#col1").prepend(panel);
