--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="styleSheet" type="text/css" href="css/style.css" />
+	<link rel="styleSheet" type="text/css" href="static/css/style.css" />
     <% include ../partials/head %>
 	
 	<script type="text/javascript">
