--- a/ejs-neu/views/partials/head.ejs
+++ b/ejs-neu/views/partials/head.ejs
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel"stylesheet" type="text/css" href="css/style.css" />
+  <link rel"stylesheet" type="text/css" href="static/css/style.css" />
   <style>
   /* Note: Try to remove the following lines to see the effect of CSS positioning */
   .affix {
