--- a/ejs-neu/views/pages/index.ejs
+++ b/ejs-neu/views/pages/index.ejs
@@ -27,16 +27,22 @@
 			var username = data[0].value;
 			var password = data[1].value;
 			$.ajax({
-				url: "http://localhost:8088/api/v1/users/login/",
-				method: "Post",
-				date: {
+				url: "http://localhost:8088/api/v1/users/login",
+				method: "POST",
+				data: {
 					username,
 					password
-				}
+				},
+				success: function(data){
+					alert(data);
+				},
+				
+				error: function(data){
+					console.log(data);
+				},
 			});
-			//$.post(url, data, callback, "json");
-			//alert(data);
-			onClear();
+			
+			//onClear();
 		}
 		
 		function onRegister(){
@@ -45,7 +51,7 @@
 			var password = data[1].value;
 			var password2 = data[2].value;
 			
-			if(password === password2){
+			if(password === password2 && password.length >=8){
 			
 		
 			$.ajax({
@@ -54,8 +60,17 @@
 					data: {
 						username,
 						password
+					},
+					success: function(data){
+						alert(data);
+					},
+					error: function(data){
+						console.log(data);
+						
+						
 					}
-				}).done( () => {console.log("Logged in as user "+ username);}).fail( e => {console.log("fehler : "+e);});
+					
+				});
 				}
 				
 		}
