--- a/ejs-neu/views/pages/index.ejs
+++ b/ejs-neu/views/pages/index.ejs
@@ -53,7 +53,7 @@
 			var password = data[1].value;
 			var password2 = data[2].value;
 			
-			if(password === password2 && password.length >=8){
+			if(password === password2 ){
 			
 		
 			$.ajax({
