--- a/ejs-neu/views/partials/header.ejs
+++ b/ejs-neu/views/partials/header.ejs
@@ -1,9 +1,9 @@
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="static/css/style.css" />
 <!-- Images above the menu bar. Disappears by scrolling -->
 <div class="container-fluid test2" >
 	  <h1>IoT Manager</h1>
 	  <h3>... schaltet alles ein und/ oder aus!</h3>
-	  
+
 </div>
 
 
@@ -14,14 +14,14 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="menubutton">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" id="navBrand" href="/main">IoT Manager</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="/main">Geräte</a>
-          
+
         </li>
         <li><a href="/wflow">Workflow</a></li>
 		</ul>
@@ -31,4 +31,3 @@
     </div>
   </div>
 </nav>
-		
