--- a/ejs-neu/views/partials/login.ejs
+++ b/ejs-neu/views/partials/login.ejs
@@ -1,40 +1,92 @@
-<!-- modal login -->
-<div class="modal fade scrollen" id="loginModal" role="dialog">
-	<div class="modal-dialog">
-
-	<!-- Modal content-->
-	<div class="modal-content">
-	<!-- Modal header -->
-		<div class="modal-header stylemodal" >
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link rel="styleSheet" type="text/css" href="static/css/style.css" />
+    <% include ../partials/head %>
+	<script type="text/javascript">
+	
+		$(document).ready(function(){  
+			document.getElementById('myNavbar').style.visibility='hidden';
+			document.getElementById('navBrand').style.visibility='hidden';
+			document.getElementById('menubutton').style.display='none';
+			$("#loginModal").modal({backdrop: 'static', keyboard: false});    
+		});
+		
+		function onLogin() {
+			var data = $('#loginForm').serializeArray();
+			var username = data[0].value;
+			var password = data[1].value;
+			$.ajax({
+				url: "http://localhost:8088/api/v1/users/login",
+				method: "POST",
+				data: {
+					username,
+					password
+				},
+				success: function(data){
+					console.log(data);
+					$('#user').parent('div').removeClass('has-error');
+					$('#password2').parent('div').removeClass('has-error');
+					//GET METHOD zur Hauptseite
+				},
+				
+				error: function(data){
+					console.log(data);
+					$('#user').parent('div').addClass('has-error');
+					$('#password2').parent('div').addClass('has-error');
+				},
+			});
 			
-			<h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
-		</div>
-	<!-- Modal body-->					
-		<div class="modal-body stylemodal" ">
-			<form role="form" id="loginForm" >
-				<div class="form-group">
-				  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
-				  <input type="text" class="form-control" name="username" id="user" placeholder="Benutzername">
-				</div>
-				<div class="form-group">
-					<label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
-					<input type="password" class="form-control" id="password" name="password" placeholder="Passwort">
-				</div>
-				<!-- Login Cancel Button -->
-				<button type="button" class="btn btn-success btn-md center-block" onclick="onLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+			
+		}
+		
+		function onSwitchReg(){
+			window.location="http://www.google.de";
+		}
+		
+			
+</script>
+</head>
+<body >
+	<header>
+		<% include ../partials/header %>
+	</header>
+	
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Login</h3>
+					  </div>
+					  <div class="panel-body">
+						<form role="form" id="loginForm" >
+							<div class="form-group">
+							  <label for="usrname"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
+							  <input type="text" class="form-control" name="username" id="user" placeholder="Benutzername">
+							</div>
+							<div class="form-group">
+								<label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Passwort</label>
+								<input type="password" class="form-control" id="password2" name="password" placeholder="Passwort">
+							</div>
+							<!-- Login Cancel Button -->
+							<button type="button" class="btn btn-success btn-md center-block" onclick="onLogin();"><span class="glyphicon glyphicon-log-in"></span> Login</button>
 								
-			</form>
-		</div>
-	<!-- Modal footer -->
-		<div class="modal-footer">
-			<div class="row">
-				<div class="col-sm-4"></div>
-				<div class="col-sm-4">
-					<button type="submit" class="btn btn-default btn-block" data-dismiss="modal" id="register" onclick="onSwitchReg()"><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
+						</form>
+					  </div>
+					 <div class="panel-footer">
+						<div class="row">
+							<div class="col-sm-4"></div>
+							<div class="col-sm-4">
+								<button type="submit" class="btn btn-default btn-block" data-dismiss="modal" id="register" onclick="onSwitchReg()"><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
+							</div>
+							<div class="col-sm-4"></div>
+						</div>
+					 </div>
 				</div>
-				<div class="col-sm-4"></div>
-			</div>
+			<div class="col-sm-2"></div>
 		</div>
-	</div>
-	</div>
-</div>
+	</div>    
+</body>
+</html>	
