--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -3,9 +3,9 @@
 <head>
 	<link rel="styleSheet" type="text/css" href="static/css/style.css" />
     <% include ../partials/head %>
-	
+
 	<script type="text/javascript">
-		
+
 		$(document).ready(function(){
 			$.ajax({
 				url: "http://localhost:8088/api/v1/devices",
@@ -18,20 +18,20 @@
 				}
 			});
 		});
-		
-		
+
+
 		function onCreateGadget(){
 		$("#createModal").modal("show");
 		}
-		
+
 		var count = 0;
-		
+
 		function onGadgetEntry(){
-			
+
 			var name = $("#createModal input#gadgetName").val();
 			var adress = $("#createModal input#ip").val();
 			var port = $("#createModal input#port").val();
-			
+
 			if( name && adress && port){
 			$.ajax({
 				url: "http://localhost:8088/api/v1/devices",
@@ -51,20 +51,20 @@
 					console.log(data);
 				}
 			});
-			
-			
+
+
 			}
 			else{
 				$('#ip').parent('div').addClass('has-error');
 				$('#gadgetName').parent('div').addClass('has-error');
 				$('#port').parent('div').addClass('has-error');
 			}
-			
-			
+
+
 		}
 		function createGadgetEntry(name, ip, port){
 			var panel = '<div class="panel panel-primary"><div class="panel-heading"><h2 class="panel-title">'+name +'</h2><button class="btn btn-xs btn-default pull-right"><span class="glyphicon glyphicon-remove"></span></button></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-primary pull-left"><span class="glyphicon glyphicon-console"></span>HTTP Request</button></div></div>';
-			
+
 			if(count % 2 == 0){
 				$("#col1").prepend(panel);
 				count++;
@@ -73,29 +73,43 @@
 				$("#col2").prepend(panel);
 				count++;
 			}
-			
+
 		}
-		
+
 		// clears the user input. Placeholder (like "Benutzername") is shown in each input field.
 		function clearInput(){
 			$("#createModal input#gadgetName").val('');
 			$("#createModal input#ip").val('');
-			$("#createModal input#port").val('');			
+			$("#createModal input#port").val('');
 			$("#createModal input").first().focus();
 			$('#ip').parent('div').removeClass('has-error');
 			$('#gadgetName').parent('div').removeClass('has-error');
 			$('#port').parent('div').removeClass('has-error');
 		}
-		
+
 		// function which is executed, when the create Model is closed
 		function closeGadgetEntry(){
 			$("#createModal").modal("hide");
-			
+
 			clearInput();
 		}
-		
-		
-		
+
+		function onLogOut(){
+			$.ajax({
+				url: "http://localhost:8088/api/v1/users/logout",
+				method: "POST"
+			}
+				success: function(data){
+					window.location="http://localhost:8088/";
+				},
+				error: function(data){
+					console.log(data);
+				})
+			};
+		}
+
+
+
 	</script>
 </head>
 <body >
@@ -109,12 +123,12 @@
 			<div class="col-sm-8">
 				<main>
 				<div class="col-sm-6" id="col1">
-					
+
 				</div>
 				<div class="col-sm-6" id="col2">
-					
-				</div>	
-				</main>			
+
+				</div>
+				</main>
 				<!-- Include Modal create. It is activated by clicking the '+' Button in the buttom right corner -->
 				<button type="button" class="fixedbutton btn btn-primary" onclick="onCreateGadget()" id="createBtn">
 					<span class="glyphicon glyphicon-plus" ></span>
@@ -124,21 +138,21 @@
 			<div class="col-sm-1"></div>
 		</div>
 		</div>
-			
+
 			<footer >
 				<% include ../partials/footer %>
 			</footer>
-			
-		
-			
+
+
+
 
 		</div>
 		<div class="col-sm-2"></div>
-	</div>	
+	</div>
 </div>
-		
-		
-		
-    
+
+
+
+
 </body>
 </html>
