--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -42,7 +42,7 @@
 					port
 				},
 				success: function(data){
-					console.log(data);
+					console.log(data._obj._id);
 					$("#createModal").modal("hide");
 					createGadgetEntry(name, adress, port);
 					clearInput();
@@ -63,7 +63,7 @@
 			
 		}
 		function createGadgetEntry(name, ip, port){
-			var panel = '<div class="panel panel-primary"><div class="panel-heading"><h2 class="panel-title">'+name +'</h2><button class="btn btn-xs btn-default pull-right"><span class="glyphicon glyphicon-remove"></span></button></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-primary pull-left"><span class="glyphicon glyphicon-console"></span>HTTP Request</button></div></div>';
+			var panel = '<div class="panel panel-primary" id='+name+'><div class="panel-heading"><h2 class="panel-title">'+name +'</h2><button class="btn btn-xs btn-default pull-right" id='+name+'1'+'><span class="glyphicon glyphicon-remove"></span></button></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-primary pull-left"><span class="glyphicon glyphicon-console"></span>HTTP Request</button></div></div>';
 			
 			if(count % 2 == 0){
 				$("#col1").prepend(panel);
@@ -94,6 +94,12 @@
 			clearInput();
 		}
 		
+		$(document).click(function(event){
+			console.log(event.target.id);
+		});
+		
+		
+		
 		
 		
 	</script>
@@ -106,22 +112,22 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-sm-2"></div>
-			<div class="col-sm-8">
-				<main>
+			<div class="col-sm-8" id="test">
+				
 				<div class="col-sm-6" id="col1">
 					
 				</div>
 				<div class="col-sm-6" id="col2">
 					
 				</div>	
-				</main>			
+							
 				<!-- Include Modal create. It is activated by clicking the '+' Button in the buttom right corner -->
 				<button type="button" class="fixedbutton btn btn-primary" onclick="onCreateGadget()" id="createBtn">
 					<span class="glyphicon glyphicon-plus" ></span>
 				</button>
 				<% include ../partials/create %>
 			</div>
-			<div class="col-sm-1"></div>
+			<div class="col-sm-1" ></div>
 		</div>
 		</div>
 			
