--- a/ejs-neu/views/partials/header.ejs
+++ b/ejs-neu/views/partials/header.ejs
@@ -16,11 +16,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" id="navBrand" href="/main">IoT Manager</a>
+      <a class="navbar-brand" id="navBrand" href="/devices">IoT Manager</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="/main">Geräte</a>
+        <li><a href="/devices">Geräte</a>
 
         </li>
         <li><a href="/wflow">Workflow</a></li>
