--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -100,7 +100,21 @@
 		$(document).click(function(event){
 			console.log(event.target.id);
 		});
-		
+	
+		function onLogout(){
+			$.ajax({
+				url: "http://localhost:8088/api/v1/users/logout",
+				method: "post",
+				data: {},
+				success: function(data){
+					console.log(data);
+					window.location="http://localhost:8088/";
+				},
+				error: function(data){
+					console.log(data);
+				}
+			});
+		}
 		
 
 
