--- a/ejs-neu/views/partials/header.ejs
+++ b/ejs-neu/views/partials/header.ejs
@@ -1,21 +1,6 @@
 <link rel="stylesheet" type="text/css" href="static/css/style.css" />
 <script type="text/javascript">
-function onLogout(){
-		console.log("test");
-	$.ajax({
-		url: "http://localhost:8088/api/v1/users/logout",
-		method: "POST",
-		data: {},
-		success: function(data){
-			console.log(data);
-			window.location="http://localhost:8088/";
-		},
-		error: function(data){
-			console.log(data);
-			window.location="http://localhost:8088/";
-		}
-	});
-}
+
 </script>
 
 <!-- Images above the menu bar. Disappears by scrolling -->
@@ -45,7 +30,7 @@ function onLogout(){
         <li><a href="/wflow">Workflow</a></li>
 		</ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/"><span class="glyphicon glyphicon-log-out" onclick="onLogout()"></span> Logout</a></li>
+        <li><button class="glyphicon glyphicon-log-out" onclick="onLogout()"></span> Logout</button></li>
       </ul>
     </div>
   </div>
