--- a/ejs-neu/views/partials/header.ejs
+++ b/ejs-neu/views/partials/header.ejs
@@ -30,7 +30,7 @@
         <li><a href="/wflow">Workflow</a></li>
 		</ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><button class="glyphicon glyphicon-log-out" onclick="onLogout()"></span> Logout</button></li>
+        <li><a><button class="glyphicon glyphicon-log-out btn btn-xs btn-danger" onclick="onLogout()">Logout</button></a></li>
       </ul>
     </div>
   </div>
